# CppExp

./: README.md  clean.py
ClassDesign1/: CMakeLists.txt
ClassDesign1/include/: AbaqusIO.h  Gmsh2IO.h  Mesh.h  MeshIOBase.h  MethodBase.h  MyMethod.h  MyPara.h  ParaBase.h  Test.h
ClassDesign1/src/: AbaqusIO.cpp  Gmsh2IO.cpp  Mesh.cpp  main.cpp
Class_Gcc9/: CMakeLists.txt  perftest
Class_Gcc9/include/: RankTwoTensor.h  Vec.h
Class_Gcc9/src/: RankTwoTensor.cpp  Vec.cpp  main.cpp
For_Each/OmpVsForEach/: CMakeLists.txt  README.md  main.cpp
MeshClass/: CMakeLists.txt  main.cpp  mesh
MeshClass/include/: Mesh.h  MeshBase.h  MeshBulk.h  MeshInterface.h
MeshClass/src/: CreateBulkMesh.cpp  CreateInterfaceMesh.cpp  MeshBulk.cpp  MeshInterface.cpp
Vector/VectorVsAllocate/: Array2D.h  CMakeLists.txt  Vector2D.h  main.cpp
